testsuite/tests/name_resolution/exit_stmt/test.out
Analyzing exit_stmt.adb
#######################

Correct case
------------

Resolving xrefs for node <ExitStmt exit_stmt.adb:9:7-9:21>
**********************************************************

Expr: <Id "Foo" exit_stmt.adb:9:17-9:20>
  references:    <DefiningName "Foo" exit_stmt.adb:2:13-2:16>
  type:          <ConcreteTypeDecl ["Boolean"] in Standard>
  expected type: <ConcreteTypeDecl ["Boolean"] in Standard>

Incorrect case
--------------

Resolving xrefs for node <ExitStmt exit_stmt.adb:13:7-13:21>
************************************************************

exit_stmt.adb:13:17: error: expected boolean type, got Integer
13 |       exit when Bar;
   |                 ^^^


Expected name resolution failure for node <ExitStmt exit_stmt.adb:13:7-13:21>

Exit with fully qualified name
------------------------------

Resolving xrefs for node <ExitStmt exit_stmt.adb:19:7-19:24>
************************************************************

Expr: <DottedName exit_stmt.adb:19:12-19:23>
  references:    <DefiningName "L" exit_stmt.adb:18:4-18:5>
  type:          None
  expected type: None
Expr: <Id "Exit_Stmt" exit_stmt.adb:19:12-19:21>
  references:    <DefiningName "Exit_Stmt" exit_stmt.adb:1:11-1:20>
  type:          None
  expected type: None
Expr: <Id "L" exit_stmt.adb:19:22-19:23>
  references:    <DefiningName "L" exit_stmt.adb:18:4-18:5>
  type:          None
  expected type: None


Done.
